[package]
name = "grpc-benchmark"
version = "0.1.0"
edition = "2021"


[dependencies]
# tonic = { version = "0.6", features = ["compression"] }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.13", features = ["rt-multi-thread", "macros"] }
jemallocator-global = "0.3.2"
real-async-trait = "0.0.2"

[build-dependencies]
tonic-build = "0.6"

[profile.release]
lto = true
panic = "abort"
